Fix spacing on radio buttons

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -66,3 +66,8 @@ footer {
 .freeformTextAnswer {
   width: 100%;
 }
+
+input[type="radio"] {
+  margin-right: 10px;
+  line-height: normal;
+}
